cabal-version: 2.4
name: hazy
version: 0.1.0.0
synopsis: The Hazy Haskell Compiler
description:
homepage:
license: GPL-3.0-only
license-file: LICENSE
author: Freddy Angel Cubas "superstar64"
maintainer: Hexagonalstar64@gmail.com
copyright: Copyright © 2026 Freddy Angel Cubas "superstar64"
category: Development

executable hazy
  main-is: Main.hs
  other-modules:
    Builtin
    Builtin.Applicative
    Builtin.Bool
    Builtin.Enum
    Builtin.Eq
    Builtin.Fractional
    Builtin.Functor
    Builtin.Integral
    Builtin.List
    Builtin.Monad
    Builtin.MonadFail
    Builtin.Num
    Builtin.Ord
    Builtin.Ordering
    Builtin.Ratio
    Builtin.Real
    Builtin.Tuple
    Core.Builtin
    Core.Index.Table.Term
    Core.Index.Term
    Core.Shift
    Core.Substitute
    Core.Temporary.Definition
    Core.Temporary.Function
    Core.Temporary.Pattern
    Core.Temporary.RightHandSide
    Core.Tree.Class
    Core.Tree.ClassExtra
    Core.Tree.Constraint
    Core.Tree.Constraints
    Core.Tree.Constructor
    Core.Tree.ConstructorInfo
    Core.Tree.Data
    Core.Tree.Declaration
    Core.Tree.Declarations
    Core.Tree.Entry
    Core.Tree.EntryInfo
    Core.Tree.Evidence
    Core.Tree.Expression
    Core.Tree.Hook
    Core.Tree.Instance
    Core.Tree.Instanciation
    Core.Tree.MethodConcrete
    Core.Tree.MethodInfo
    Core.Tree.Module
    Core.Tree.Scheme
    Core.Tree.SchemeOver
    Core.Tree.Statements
    Core.Tree.Type
    Core.Tree.TypeDeclaration
    Core.Tree.TypeDeclarationExtra
    Core.Tree.TypeDefinition
    Data.Heptafoldable
    Data.Heptafunctor
    Data.Heptatraversable
    Data.Hexafoldable
    Data.Hexafunctor
    Data.Hexatraversable
    Data.List.Reverse
    Data.Octafoldable
    Data.Octafunctor
    Data.Octatraversable
    Data.Pentafoldable
    Data.Pentafunctor
    Data.Pentatraversable
    Data.Quadrifoldable
    Data.Quadrifunctor
    Data.Quadritraversable
    Data.Strict.Maybe
    Data.Strict.Vector1
    Data.Strict.Vector2
    Data.Trifoldable
    Data.Trifunctor
    Data.Tritraversable
    Error
    Generate.Binding.Evidence
    Generate.Binding.Term
    Generate.Binding.Type
    Generate.Context
    Generate.Global
    Generate.GlobalType
    Generate.Go.Declarations
    Generate.Go.Evidence
    Generate.Go.Expression
    Generate.Go.Hook
    Generate.Go.Instance
    Generate.Go.Module
    Generate.Go.Statements
    Generate.Info
    Generate.LocalType
    Generate.Mangle
    Generate.Mangle.Builtin
    Generate.Precontext
    Generate.Target
    Generate.Variable
    Graph.StronglyConnected
    Graph.Topological
    Graph.Topological1
    Graph.Topological2
    Graph.Topological3
    Graph.Topological4
    Graph.Topological5
    Graph.Topological6
    Graph.Topological7
    Graph.Topological8
    Javascript.Keywords
    Javascript.Printer
    Javascript.Printer.Lexer
    Javascript.Printer.Tree.AdditiveExpression
    Javascript.Printer.Tree.ArgumentList
    Javascript.Printer.Tree.Arguments
    Javascript.Printer.Tree.ArrayLiteral
    Javascript.Printer.Tree.ArrowFunction
    Javascript.Printer.Tree.ArrowParameters
    Javascript.Printer.Tree.AssignmentExpression
    Javascript.Printer.Tree.BindingElement
    Javascript.Printer.Tree.BindingList
    Javascript.Printer.Tree.BitwiseANDExpression
    Javascript.Printer.Tree.BitwiseORExpression
    Javascript.Printer.Tree.BitwiseXORExpression
    Javascript.Printer.Tree.Block
    Javascript.Printer.Tree.BreakStatement
    Javascript.Printer.Tree.CallExpression
    Javascript.Printer.Tree.ClassElementName
    Javascript.Printer.Tree.ConciseBody
    Javascript.Printer.Tree.ConditionalExpression
    Javascript.Printer.Tree.Declaration
    Javascript.Printer.Tree.ElementList
    Javascript.Printer.Tree.Elision
    Javascript.Printer.Tree.EqualityExpression
    Javascript.Printer.Tree.ExponentiationExpression
    Javascript.Printer.Tree.ExportDeclaration
    Javascript.Printer.Tree.ExportsList
    Javascript.Printer.Tree.ExportSpecifier
    Javascript.Printer.Tree.Expression
    Javascript.Printer.Tree.FormalParameterList
    Javascript.Printer.Tree.FormalParameters
    Javascript.Printer.Tree.FromClause
    Javascript.Printer.Tree.IfStatement
    Javascript.Printer.Tree.ImportClause
    Javascript.Printer.Tree.ImportDeclaration
    Javascript.Printer.Tree.ImportsList
    Javascript.Printer.Tree.ImportSpecifier
    Javascript.Printer.Tree.Initializer
    Javascript.Printer.Tree.LabelledItem
    Javascript.Printer.Tree.LabelledStatement
    Javascript.Printer.Tree.LeftHandSideExpression
    Javascript.Printer.Tree.LetOrConst
    Javascript.Printer.Tree.LexicalBinding
    Javascript.Printer.Tree.LexicalDeclaration
    Javascript.Printer.Tree.Literal
    Javascript.Printer.Tree.LiteralPropertyName
    Javascript.Printer.Tree.LogicalANDExpression
    Javascript.Printer.Tree.LogicalORExpression
    Javascript.Printer.Tree.MemberExpression
    Javascript.Printer.Tree.MethodDefinition
    Javascript.Printer.Tree.ModuleExportName
    Javascript.Printer.Tree.ModuleItem
    Javascript.Printer.Tree.MultiplicativeExpression
    Javascript.Printer.Tree.NamedExports
    Javascript.Printer.Tree.NamedImports
    Javascript.Printer.Tree.NewExpression
    Javascript.Printer.Tree.ObjectLiteral
    Javascript.Printer.Tree.PrimaryExpression
    Javascript.Printer.Tree.PropertyDefinition
    Javascript.Printer.Tree.PropertyDefinitionList
    Javascript.Printer.Tree.PropertyName
    Javascript.Printer.Tree.RelationExpression
    Javascript.Printer.Tree.ReturnStatement
    Javascript.Printer.Tree.ShiftExpression
    Javascript.Printer.Tree.ShortCircuitExpression
    Javascript.Printer.Tree.SingleNameBinding
    Javascript.Printer.Tree.Statement
    Javascript.Printer.Tree.StatementListItem
    Javascript.Printer.Tree.UnaryExpression
    Javascript.Printer.Tree.UpdateExpression
    Javascript.Printer.Tree.WithClause
    Javascript.Tree.Expression
    Javascript.Tree.Field
    Javascript.Tree.Module
    Javascript.Tree.Statement
    Order
    Package
    Semantic.Check.ClassInstance
    Semantic.Check.ConstructorInstance
    Semantic.Check.Context
    Semantic.Check.DataInstance
    Semantic.Check.EntryInstance
    Semantic.Check.Functor.Annotated
    Semantic.Check.Functor.Declarations
    Semantic.Check.Functor.Instance.Key
    Semantic.Check.Functor.Module
    Semantic.Check.Functor.ModuleSet
    Semantic.Check.Go.Declarations
    Semantic.Check.Go.Module
    Semantic.Check.Go.Scheme
    Semantic.Check.Go.TypeDeclaration
    Semantic.Check.InstanceAnnotation
    Semantic.Check.KindAnnotation
    Semantic.Check.LocalBinding
    Semantic.Check.Mask
    Semantic.Check.Simple.Class
    Semantic.Check.Simple.Constraint
    Semantic.Check.Simple.Constraints
    Semantic.Check.Simple.Constructor
    Semantic.Check.Simple.ConstructorInfo
    Semantic.Check.Simple.Data
    Semantic.Check.Simple.EntryInfo
    Semantic.Check.Simple.Evidence
    Semantic.Check.Simple.Instanciation
    Semantic.Check.Simple.MethodInfo
    Semantic.Check.Simple.Scheme
    Semantic.Check.Simple.SchemeOver
    Semantic.Check.Simple.SelectorInfo
    Semantic.Check.Simple.Type
    Semantic.Check.Simple.UpdateInfo
    Semantic.Check.Temporary.Alternative
    Semantic.Check.Temporary.Body
    Semantic.Check.Temporary.CallHead
    Semantic.Check.Temporary.Comprehension
    Semantic.Check.Temporary.Constraint
    Semantic.Check.Temporary.Constraints
    Semantic.Check.Temporary.Constructor
    Semantic.Check.Temporary.ConstructorInfo
    Semantic.Check.Temporary.Declaration
    Semantic.Check.Temporary.Declarations
    Semantic.Check.Temporary.Definition
    Semantic.Check.Temporary.Definition2
    Semantic.Check.Temporary.Definition3
    Semantic.Check.Temporary.Definition4
    Semantic.Check.Temporary.Do
    Semantic.Check.Temporary.Entry
    Semantic.Check.Temporary.EntryInfo
    Semantic.Check.Temporary.Expression
    Semantic.Check.Temporary.ExpressionField
    Semantic.Check.Temporary.Field
    Semantic.Check.Temporary.Function
    Semantic.Check.Temporary.Instance
    Semantic.Check.Temporary.Lambda
    Semantic.Check.Temporary.Method
    Semantic.Check.Temporary.MethodAbstract
    Semantic.Check.Temporary.MethodConcrete
    Semantic.Check.Temporary.Pattern
    Semantic.Check.Temporary.PatternField
    Semantic.Check.Temporary.RightHandSide
    Semantic.Check.Temporary.Scheme
    Semantic.Check.Temporary.Select
    Semantic.Check.Temporary.SelectorInfo
    Semantic.Check.Temporary.Statements
    Semantic.Check.Temporary.StrictnessAnnotation
    Semantic.Check.Temporary.Type
    Semantic.Check.Temporary.TypeDeclarationExtra
    Semantic.Check.Temporary.TypeDefinition
    Semantic.Check.Temporary.TypeDefinition2
    Semantic.Check.Temporary.TypePattern
    Semantic.Check.Temporary.UpdateInfo
    Semantic.Check.TermBinding
    Semantic.Check.TypeAnnotation
    Semantic.Check.TypeBinding
    Semantic.Connect
    Semantic.FreeVariables
    Semantic.Group.Functor.Term.Declarations
    Semantic.Group.Functor.Term.ModuleSet
    Semantic.Group.Functor.Type.Declarations
    Semantic.Group.Functor.Type.ModuleSet
    Semantic.Index.Constructor
    Semantic.Index.Evidence
    Semantic.Index.Evidence0
    Semantic.Index.Link.Term
    Semantic.Index.Link.Type
    Semantic.Index.Local
    Semantic.Index.Method
    Semantic.Index.Selector
    Semantic.Index.Table.Evidence0
    Semantic.Index.Table.Local
    Semantic.Index.Table.Term
    Semantic.Index.Table.Type
    Semantic.Index.Term
    Semantic.Index.Term0
    Semantic.Index.Term2
    Semantic.Index.Type
    Semantic.Index.Type0
    Semantic.Index.Type2
    Semantic.Index.Type3
    Semantic.Label.Binding.Local
    Semantic.Label.Binding.Term
    Semantic.Label.Binding.Type
    Semantic.Label.Context
    Semantic.Layout
    Semantic.Locality
    Semantic.Resolve.Binding.Constructor
    Semantic.Resolve.Binding.Term
    Semantic.Resolve.Binding.Type
    Semantic.Resolve.Bindings
    Semantic.Resolve.Builtin
    Semantic.Resolve.Canonical
    Semantic.Resolve.Context
    Semantic.Resolve.Core
    Semantic.Resolve.Detail.Binding.Constructor
    Semantic.Resolve.Detail.Binding.Term
    Semantic.Resolve.Detail.Binding.Type
    Semantic.Resolve.Functor.Binding.Constructor
    Semantic.Resolve.Functor.Binding.Term
    Semantic.Resolve.Functor.Binding.Type
    Semantic.Resolve.Functor.Bindings
    Semantic.Resolve.Functor.Canonical
    Semantic.Resolve.Functor.Core
    Semantic.Resolve.Functor.Same
    Semantic.Resolve.Go.Alternative
    Semantic.Resolve.Go.Body
    Semantic.Resolve.Go.CallHead
    Semantic.Resolve.Go.Constraint
    Semantic.Resolve.Go.Constraints
    Semantic.Resolve.Go.Declarations
    Semantic.Resolve.Go.Entry
    Semantic.Resolve.Go.Expression
    Semantic.Resolve.Go.ExpressionField
    Semantic.Resolve.Go.Function
    Semantic.Resolve.Go.Instance
    Semantic.Resolve.Go.Lambda
    Semantic.Resolve.Go.Module
    Semantic.Resolve.Go.Pattern
    Semantic.Resolve.Go.PatternField
    Semantic.Resolve.Go.RightHandSide
    Semantic.Resolve.Go.Scheme
    Semantic.Resolve.Go.Select
    Semantic.Resolve.Go.Statements
    Semantic.Resolve.Go.Type
    Semantic.Resolve.Go.TypePattern
    Semantic.Resolve.Import
    Semantic.Resolve.Stability
    Semantic.Resolve.Temporary.Complete.ClassInstance
    Semantic.Resolve.Temporary.Complete.Constructor
    Semantic.Resolve.Temporary.Complete.ConstructorDeclaration
    Semantic.Resolve.Temporary.Complete.DataInstance
    Semantic.Resolve.Temporary.Complete.Declaration
    Semantic.Resolve.Temporary.Complete.Declarations
    Semantic.Resolve.Temporary.Complete.Definition
    Semantic.Resolve.Temporary.Complete.Field
    Semantic.Resolve.Temporary.Complete.GADTConstructor
    Semantic.Resolve.Temporary.Complete.Method
    Semantic.Resolve.Temporary.Complete.Module
    Semantic.Resolve.Temporary.Complete.Selector
    Semantic.Resolve.Temporary.Complete.TypeDeclaration
    Semantic.Resolve.Temporary.ExpressionInfix
    Semantic.Resolve.Temporary.Infix
    Semantic.Resolve.Temporary.Partial.ConstructorDeclaration
    Semantic.Resolve.Temporary.Partial.Declaration
    Semantic.Resolve.Temporary.Partial.Method
    Semantic.Resolve.Temporary.Partial.More.ADT
    Semantic.Resolve.Temporary.Partial.More.Choice
    Semantic.Resolve.Temporary.Partial.More.Class
    Semantic.Resolve.Temporary.Partial.More.Constructor
    Semantic.Resolve.Temporary.Partial.More.Function
    Semantic.Resolve.Temporary.Partial.More.GADT
    Semantic.Resolve.Temporary.Partial.More.Method
    Semantic.Resolve.Temporary.Partial.More.Selector
    Semantic.Resolve.Temporary.Partial.More.Synonym
    Semantic.Resolve.Temporary.Partial.TypeDeclaration
    Semantic.Resolve.Temporary.PatternInfix
    Semantic.Resolve.Temporary.TypeInfix
    Semantic.Scope
    Semantic.Shift
    Semantic.Stage
    Semantic.Tree.Alternative
    Semantic.Tree.Body
    Semantic.Tree.CallHead
    Semantic.Tree.Combinators.Implicit
    Semantic.Tree.Combinators.Inferred
    Semantic.Tree.Constraint
    Semantic.Tree.Constraints
    Semantic.Tree.Constructor
    Semantic.Tree.Declaration
    Semantic.Tree.Declarations
    Semantic.Tree.Definition
    Semantic.Tree.Definition2
    Semantic.Tree.Definition3
    Semantic.Tree.Definition4
    Semantic.Tree.Entry
    Semantic.Tree.Expression
    Semantic.Tree.ExpressionField
    Semantic.Tree.Field
    Semantic.Tree.Function
    Semantic.Tree.GADTConstructor
    Semantic.Tree.Instance
    Semantic.Tree.Lambda
    Semantic.Tree.Method
    Semantic.Tree.MethodAbstract
    Semantic.Tree.MethodConcrete
    Semantic.Tree.Module
    Semantic.Tree.Pattern
    Semantic.Tree.PatternField
    Semantic.Tree.RightHandSide
    Semantic.Tree.Scheme
    Semantic.Tree.Select
    Semantic.Tree.Selector
    Semantic.Tree.Statements
    Semantic.Tree.StrictnessAnnotation
    Semantic.Tree.Type
    Semantic.Tree.TypeDeclaration
    Semantic.Tree.TypeDeclarationExtra
    Semantic.Tree.TypeDefinition
    Semantic.Tree.TypeDefinition2
    Semantic.Tree.TypePattern
    Semantic.Unify
    Semantic.Unify.Builtin
    Semantic.Unify.Class
    Semantic.Unify.Constraint
    Semantic.Unify.Constraints
    Semantic.Unify.Error
    Semantic.Unify.Evidence
    Semantic.Unify.Instanciation
    Semantic.Unify.SchemeOver
    Semantic.Unify.Type
    Syntax.Extensions
    Syntax.FreeVariables
    Syntax.Lexer
    Syntax.Parser
    Syntax.ParserCombinator
    Syntax.Position
    Syntax.Printer
    Syntax.StringLiteral
    Syntax.Tree.Alias
    Syntax.Tree.Alternative
    Syntax.Tree.Associativity
    Syntax.Tree.Body
    Syntax.Tree.Brand
    Syntax.Tree.ClassDeclaration
    Syntax.Tree.ClassDeclarations
    Syntax.Tree.Constraint
    Syntax.Tree.Constraints
    Syntax.Tree.Constructor
    Syntax.Tree.Data
    Syntax.Tree.Declaration
    Syntax.Tree.Declarations
    Syntax.Tree.Entry
    Syntax.Tree.Exports
    Syntax.Tree.ExportSymbol
    Syntax.Tree.Expression
    Syntax.Tree.ExpressionField
    Syntax.Tree.ExpressionInfix
    Syntax.Tree.Field
    Syntax.Tree.Fixity
    Syntax.Tree.GADTConstructor
    Syntax.Tree.Import
    Syntax.Tree.ImportFields
    Syntax.Tree.ImportSymbol
    Syntax.Tree.ImportSymbols
    Syntax.Tree.InstanceDeclaration
    Syntax.Tree.InstanceDeclarations
    Syntax.Tree.InstanceHead
    Syntax.Tree.LeftHandSide
    Syntax.Tree.Marked
    Syntax.Tree.Module
    Syntax.Tree.Pattern
    Syntax.Tree.PatternField
    Syntax.Tree.PatternInfix
    Syntax.Tree.Qualification
    Syntax.Tree.RightHandSide
    Syntax.Tree.Scheme
    Syntax.Tree.Statement
    Syntax.Tree.Statements
    Syntax.Tree.Type
    Syntax.Tree.TypeInfix
    Syntax.Tree.TypePattern
    Syntax.Variable
    Verbose

  build-depends:
    base,
    containers >=0.7 && <0.8,
    directory >=1.3.9 && <1.4,
    filepath >=1.5.4 && <1.6,
    parser-combinators >=1.3.0 && <1.4,
    text >=2.1.2 && <2.2,
    vector >=0.13.2 && <0.14,

  default-extensions:
    DataKinds
    DeriveFoldable
    DeriveFunctor
    DeriveTraversable
    DisambiguateRecordFields
    GADTs
    LambdaCase
    MonoLocalBinds
    MultilineStrings
    MultiWayIf
    NamedFieldPuns
    PolymorphicComponents
    PostfixOperators
    ScopedTypeVariables
    StandaloneKindSignatures
    TypeOperators

  hs-source-dirs:
    compiler
    utility

  default-language: Haskell2010
  ghc-options:
    -Wno-unrecognised-pragmas
    -Wno-x-partial
    -Werror=incomplete-uni-patterns
    -Werror=unticked-promoted-constructors
    -Werror=unused-imports
    -Werror=unused-local-binds
    -Werror=unused-pattern-binds
    -Werror=unused-matches
    -Werror=incomplete-patterns
    -Werror=missing-fields
    -Werror=incomplete-record-selectors
    -Werror=incomplete-record-updates
